Bug 74714 don't hardcode "KB"/"MB" in MailNews patch by mark@standard8.demon.co.uk r=neil sr=bienvenu