mailnews/base/src/nsMsgDBView.h
@@ -148,6 +148,8 @@ protected:
   static PRUnichar* kForwardedString;
   static PRUnichar* kNewString;
 
+  static PRUnichar* kKiloByteString;
+
   nsCOMPtr<nsITreeBoxObject> mTree;
   nsCOMPtr<nsITreeSelection> mTreeSelection;
   PRUint32 mNumSelectedRows; // we cache this to determine when to push command status notifications.
